--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "pg": "^8.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
     "react-version-check": "^1.0.8",
     "web-vitals": "^2.1.4"
@@ -42,5 +41,8 @@
   "main": "index.js",
   "author": "",
   "license": "ISC",
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000",
+  "devDependencies": {
+    "react-router-dom": "^6.23.0"
+  }
 }
